syntax = "proto3";

package api.greeter_service;

service GreeterService {
  rpc SayHello(GreetingRequest) returns (GreetingResponse) {}
}

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string greeting = 1;
}
